// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogRenderer /> should render correctly - index 1`] = `
.c7 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  margin: 0;
}

.c13 {
  width: 1.25rem;
  height: 1.25rem;
}

.c10 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c10:focus-visible {
  position: relative;
  outline: none !important;
}

.c10:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c14 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c5 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c9 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c9:first-of-type {
  margin-top: 0.86rem;
}

.c3 {
  width: 100%;
  height: 50rem;
  margin-top: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c6 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c10:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c10:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c2 c3"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <h1
            class="c7 c8"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c9"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c10"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c11"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c12"
              >
                <svg
                  class="c13 c14"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c10"
              href="/contact"
            >
              <span
                class="c11"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c1 {
  margin: 0;
}

.c10 {
  width: 1.25rem;
  height: 1.25rem;
}

.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c0:focus-visible {
  position: relative;
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c11 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c13 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 2.13rem 0 0 0;
}

.c4 {
  font-style: italic;
  padding-bottom: 0.5rem;
}

.c7 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c7:first-of-type {
  margin-top: 0.86rem;
}

.c6 {
  display: inline;
  color: #1e1e1e;
}

.c6 .markdown-renderer__element {
  max-width: 100%;
}

.c8 {
  width: 100%;
}

.c3 {
  margin-top: 0.86rem;
  margin-bottom: 1rem;
}

.c5 {
  margin-bottom: 1rem;
}

.c5 > * {
  margin: 0 0.375rem 0.375rem 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c14 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <a
          class="c0"
          href="/blogs"
        >
          <span
            class="c1"
          >
            ⇠ Blogs
          </span>
        </a>
      </div>
    </div>
    <div
      class=""
    >
      <h1
        class="c2 "
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="c3"
    >
      <span
        class="c1 c4"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="c5"
    >
      <div
        class=""
      >
        <span
          class=""
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="c6"
    >
      <span
        class="c7 c8 markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="c0"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c1"
          >
            a link
          </span>
          <div
            class="c9"
          >
            <svg
              class="c10 c11"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c12"
      >
        <div
          class="c13 c14"
        >
          <h1
            class="c15 c16"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c7"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c0"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c1"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c9"
              >
                <svg
                  class="c10 c11"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c0"
              href="/contact"
            >
              <span
                class="c1"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog and admin 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c13 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c17 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c1 {
  margin: 0;
}

.c10 {
  width: 1.25rem;
  height: 1.25rem;
}

.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c0:focus-visible {
  position: relative;
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c11 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c12 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14 {
  margin: 3.34rem 0 0 0;
}

.c18 {
  margin: 2.13rem 0 0 0;
}

.c4 {
  font-style: italic;
  padding-bottom: 0.5rem;
}

.c7 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c7:first-of-type {
  margin-top: 0.86rem;
}

.c6 {
  display: inline;
  color: #1e1e1e;
}

.c6 .markdown-renderer__element {
  max-width: 100%;
}

.c8 {
  width: 100%;
}

.c3 {
  margin-top: 0.86rem;
  margin-bottom: 1rem;
}

.c5 {
  margin-bottom: 1rem;
}

.c5 > * {
  margin: 0 0.375rem 0.375rem 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c16 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c15 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <a
          class="c0"
          href="/blogs"
        >
          <span
            class="c1"
          >
            ⇠ Blogs
          </span>
        </a>
      </div>
    </div>
    <div
      class=""
    >
      <h1
        class="c2 "
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="c3"
    >
      <span
        class="c1 c4"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="c5"
    >
      <div
        class=""
      >
        <span
          class=""
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="c6"
    >
      <span
        class="c7 c8 markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="c0"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c1"
          >
            a link
          </span>
          <div
            class="c9"
          >
            <svg
              class="c10 c11"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
    <div
      class="c12"
    >
      <h1
        class="c13 c14"
        id="edit-blog"
      >
        EDIT BLOG
      </h1>
      <div>
        BLOG_FORM
      </div>
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c15"
      >
        <div
          class="c12 c16"
        >
          <h1
            class="c17 c18"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c7"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c0"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c1"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c9"
              >
                <svg
                  class="c10 c11"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c0"
              href="/contact"
            >
              <span
                class="c1"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog load error 1`] = `
.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c12 {
  margin: 0;
}

.c14 {
  width: 1.25rem;
  height: 1.25rem;
}

.c11 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c11:focus-visible {
  position: relative;
  outline: none !important;
}

.c11:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c11:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c15 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c5 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  margin: 0;
}

.c10 {
  margin: 2.13rem 0 0 0;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c3 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c0 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c0:first-of-type {
  margin-top: 0.86rem;
}

.c4 {
  width: 100%;
  height: 50rem;
  margin-top: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c9 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c11:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c11:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c8 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <span
      class="c0"
    >
      <span
        class=""
      >
        This blog couldn't be loaded
        <br />
        Some error
      </span>
    </span>
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3 c4"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c5"
    >
      <h1
        class="c6 c7"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c8"
      >
        <div
          class="c5 c9"
        >
          <h1
            class="c6 c10"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c0"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c11"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c12"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c13"
              >
                <svg
                  class="c14 c15"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c11"
              href="/contact"
            >
              <span
                class="c12"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with initial state 1`] = `
.c7 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  margin: 0;
}

.c13 {
  width: 1.25rem;
  height: 1.25rem;
}

.c10 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c10:focus-visible {
  position: relative;
  outline: none !important;
}

.c10:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c14 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c5 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg,rgb(238,238,238),rgb(245,245,245),rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: eflhBg 3.5s ease-in-out infinite;
  animation: eflhBg 3.5s ease-in-out infinite;
}

.c9 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c9:first-of-type {
  margin-top: 0.86rem;
}

.c3 {
  width: 100%;
  height: 50rem;
  margin-top: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c6 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c10:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c10:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-image: linear-gradient( 90deg,rgb(17,17,17),rgb(50,50,50),rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c2 c3"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <h1
            class="c7 c8"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c9"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c10"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c11"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c12"
              >
                <svg
                  class="c13 c14"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c10"
              href="/contact"
            >
              <span
                class="c11"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with ssrBlog 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c15 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c1 {
  margin: 0;
}

.c10 {
  width: 1.25rem;
  height: 1.25rem;
}

.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c0:focus-visible {
  position: relative;
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c11 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c13 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16 {
  margin: 2.13rem 0 0 0;
}

.c4 {
  font-style: italic;
  padding-bottom: 0.5rem;
}

.c7 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c7:first-of-type {
  margin-top: 0.86rem;
}

.c6 {
  display: inline;
  color: #1e1e1e;
}

.c6 .markdown-renderer__element {
  max-width: 100%;
}

.c8 {
  width: 100%;
}

.c3 {
  margin-top: 0.86rem;
  margin-bottom: 1rem;
}

.c5 {
  margin-bottom: 1rem;
}

.c5 > * {
  margin: 0 0.375rem 0.375rem 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c14 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c12 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <a
          class="c0"
          href="/blogs"
        >
          <span
            class="c1"
          >
            ⇠ Blogs
          </span>
        </a>
      </div>
    </div>
    <div
      class=""
    >
      <h1
        class="c2 "
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="c3"
    >
      <span
        class="c1 c4"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="c5"
    >
      <div
        class=""
      >
        <span
          class=""
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="c6"
    >
      <span
        class="c7 c8 markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="c0"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c1"
          >
            a link
          </span>
          <div
            class="c9"
          >
            <svg
              class="c10 c11"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div>
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c12"
      >
        <div
          class="c13 c14"
        >
          <h1
            class="c15 c16"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c7"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c0"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c1"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c9"
              >
                <svg
                  class="c10 c11"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c0"
              href="/contact"
            >
              <span
                class="c1"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
